# HaskellForMaths-fork

./: HaskellForMaths-excerpt.cabal  HaskellForMaths.cabal  README.md
Math/Algebra/: LinearAlgebra.hs
Math/Algebra/Field/: Extension.hs
Math/Algebra/NonCommutative/: NCPoly.hs  TensorAlgebra.hs
Math/Algebras/: Structures.hs  TensorAlgebra.hs
Math/Combinatorics/: Design.hs  FiniteGeometry.hs  Graph.hs  GraphAuts.hs  Hypergraph.hs  StronglyRegularGraph.hs
Math/CommutativeAlgebra/: Polynomial.hs
Math/Projects/: RootSystem.hs  Rubik.hs
Math/Projects/ChevalleyGroup/: Exceptional.hs
Math/Projects/KnotTheory/: LaurentMPoly.hs
Math/Test/: TDesign.hs  TField.hs  TPermutationGroup.hs  TestAll.hs
Math/Test/TAlgebras/: TTensorProduct.hs
